--- a/management-report/markdown/management-report.Rmd
+++ b/management-report/markdown/management-report.Rmd
@@ -720,7 +720,11 @@ accom_comp_data<-comp_data %>%
   mutate(perc_of_records_missing_not_known = paste0(perc_of_records_missing_not_known, "%")) %>% 
    mutate(across(where(is.numeric), ~format(., big.mark = ","))) %>% 
   pivot_wider(names_from = fy, values_from = c(number_of_records, perc_of_records_missing_not_known),
-              names_vary = "slowest") 
+              names_vary = "slowest") %>% 
+  mutate(across(starts_with("number"), ~if_else(is.na(.), "    0", .))) %>% 
+  mutate(across(starts_with("perc"), ~if_else(is.na(.), "-", .)))
+  
+
 
 headers <- htmltools::withTags(table(
   class = 'display',
@@ -732,7 +736,7 @@ headers <- htmltools::withTags(table(
       th(colspan = 2, 'All', style = css(textAlign="center"))
     ),
     tr(
-      lapply(c(" ",rep(c("Number of referrals", "% Unknown"), 10)), th)
+      lapply(c(" ",rep(c("Number of referrals", "% Unknown"), length(all_years)+1)), th)
     )
   )
 ))
@@ -755,7 +759,7 @@ bscols(widths = 12,
                              )) %>% 
             DT::formatStyle(0, target = "row",
               fontWeight = DT::styleEqual(dim(accom_comp_data)[1],"bold")) %>% 
-               DT::formatStyle(c(1,3,5,7,9,11,13,15,17,19), `border-right` = "solid 1px")
+               DT::formatStyle(c(seq(1,by=2, len=length(all_years)+1)), `border-right` = "solid 1px")
             )
        )
 
@@ -876,7 +880,9 @@ stage_comp_data <- comp_data %>%
   mutate(perc_of_records_ytbd = paste0(perc_of_records_ytbd, "%")) %>%
    mutate(across(where(is.numeric), ~format(., big.mark = ","))) %>% 
   pivot_wider(names_from = fy, values_from = c(number_of_records, perc_of_records_missing_not_known, perc_of_records_ytbd),
-              names_vary = "slowest")
+              names_vary = "slowest") %>% 
+  mutate(across(starts_with("number"), ~if_else(is.na(.), "    0", .))) %>% 
+  mutate(across(starts_with("perc"), ~if_else(is.na(.), "-", .)))
 
 headers_ytbd <- htmltools::withTags(table(
   class = 'display',
@@ -888,7 +894,7 @@ headers_ytbd <- htmltools::withTags(table(
       th(colspan = 3, 'All', style = css(textAlign="center"))
     ),
     tr(
-      lapply(c(" ",rep(c("Number of referrals", "% Unknown", "% YTBD"), 10)), th)
+      lapply(c(" ",rep(c("Number of referrals", "% Unknown", "% YTBD"), length(all_years)+1)), th)
     )
   )
 ))
@@ -914,7 +920,7 @@ bscols(widths = 12,
                              )) %>% 
             DT::formatStyle(0, target = "row",
               fontWeight = DT::styleEqual(dim(stage_comp_data)[1],"bold")) %>% 
-               DT::formatStyle(c(1,4,7,10,13,16,19,22,25,28), `border-right` = "solid 1px")
+               DT::formatStyle(c(seq(1,by=3, len=length(all_years)+1)), `border-right` = "solid 1px")
             )
        )
 
@@ -932,7 +938,9 @@ model_comp_data <- comp_data %>%
   mutate(perc_of_records_ytbd = paste0(perc_of_records_ytbd, "%")) %>%
    mutate(across(where(is.numeric), ~format(., big.mark = ","))) %>% 
   pivot_wider(names_from = fy, values_from = c(number_of_records, perc_of_records_missing_not_known, perc_of_records_ytbd),
-              names_vary = "slowest")
+              names_vary = "slowest") %>% 
+  mutate(across(starts_with("number"), ~if_else(is.na(.), "    0", .))) %>% 
+  mutate(across(starts_with("perc"), ~if_else(is.na(.), "-", .)))
   
 
 bscols(widths = 12,
@@ -953,7 +961,7 @@ bscols(widths = 12,
                              )) %>% 
             DT::formatStyle(0, target = "row",
               fontWeight = DT::styleEqual(dim(model_comp_data)[1],"bold")) %>% 
-               DT::formatStyle(c(1,4,7,10,13,16,19,22,25,28), `border-right` = "solid 1px")
+               DT::formatStyle(c(seq(1,by=3, len=length(all_years)+1)), `border-right` = "solid 1px")
             )
        )
 
