--- a/management-report/markdown/subpage-demographics.Rmd
+++ b/management-report/markdown/subpage-demographics.Rmd
@@ -128,14 +128,14 @@ pds_all_simd_rates %>% filter(geog == "Scotland") %>% select(fy, simd, pop_rate_
 
 #legend tibble
 legend_data_1 <- tibble(
-  geog = unique(pds_all$geog),
+  geog = unique((pds_all %>% filter(geog != "Unknown"))$geog),
   legend = c(" ", rep("Scotland",45)),
   x = 1,
   y = 0)
 
 legend_data_2 <- tibble(
-  geog = unique(pds_all$geog),
-  legend = unique(pds_all$geog),
+  geog = unique((pds_all %>% filter(geog != "Unknown"))$geog),
+  legend = unique((pds_all %>% filter(geog != "Unknown"))$geog),
   x = 1,
   y = 0)
 
