--- a/management-report/markdown/subpage-pathways.Rmd
+++ b/management-report/markdown/subpage-pathways.Rmd
@@ -934,6 +934,8 @@ the number and percentage of total referrals whose PDS was ended with no contact
 `r if(qt != 4) {HTML("<br>")}`
 **Please note:** *Aberdeen City Health & Social Care Partnership changed to provide PDS in 2019 to an inhouse hybrid model. This change in model, and process of receiving referrals and recording, resulted in data quality issues for financial years 2019/20 and 2020/21. This should be taken into account when interpreting figures for Aberdeen City and NHS Grampian.*
 
+**Please note:** *NHS Shetland did not have a PDS worker in post from 2022/23 Q1 through 2023/24 Q3. This will affect the pathway waiting times for NHS Shetland for 2022/23 and 2023/24. A PDS worker was assigned in 2023/24 Q4 and the PDS service in Shetland has resumed.*
+
 Row {.tabset data-height=930}
 ----------------------------------------------------------------------
 
