--- a/management-report/markdown/subpage-trends.Rmd
+++ b/management-report/markdown/subpage-trends.Rmd
@@ -101,7 +101,7 @@ pds_all_totals %>%
             rename(`Integration Authority Area/Health Board` = geog) %>%
             select(-age_grp_2) %>% 
             kable(align = c("l", rep("r", length(all_years)))) %>% 
-            kable_styling(full_width = TRUE) %>%
+            kable_styling(full_width = TRUE, c("striped","hover")) %>%
             column_spec(1, bold = TRUE) %>%
   # Add header above table 
             add_header_above(
@@ -147,7 +147,7 @@ pds_all_totals %>% filter(!grepl("NHS", geog), geog != "Scotland") %>%
             rename(`Integration Authority Area` = geog) %>%
             select(-age_grp_2) %>% 
             kable(align = c("l", rep("r", length(all_years)))) %>% 
-            kable_styling(full_width = TRUE) %>%
+            kable_styling(full_width = TRUE, c("striped","hover")) %>%
             column_spec(1, bold = TRUE) %>%
   # Add header above table 
             add_header_above(
@@ -193,7 +193,7 @@ pds_all_totals %>% filter(grepl("NHS", geog)) %>%
             rename(`Health Board` = geog) %>%
             select(-age_grp_2) %>% 
             kable(align = c("l", rep("r", length(all_years)))) %>%
-            kable_styling(full_width = TRUE) %>%
+            kable_styling(full_width = TRUE, c("striped","hover")) %>%
             column_spec(1, bold = TRUE) %>%
   # Add header above table 
             add_header_above(
@@ -295,7 +295,7 @@ pds_all_rates %>% filter(geog == "Scotland" | !grepl("NHS", geog)) %>%
             pivot_wider(names_from = fy, values_from = pop_rate_10000) %>%
             rename(`Integration Authority Area` = geog) %>%
             kable(align = c("l", rep("r", length(all_years)))) %>%
-            kable_styling(full_width = TRUE) %>%
+            kable_styling(full_width = TRUE, c("striped","hover")) %>%
             column_spec(1, bold = TRUE) %>%
   # Add header above table
             add_header_above(
@@ -342,7 +342,7 @@ pds_all_rates %>% filter(geog == "Scotland" | grepl("NHS", geog)) %>%
             pivot_wider(names_from = fy, values_from = pop_rate_10000) %>%
             rename(`Health Board` = geog) %>%
             kable(align = c("l", rep("r", length(all_years)))) %>%
-            kable_styling(full_width = TRUE) %>%
+            kable_styling(full_width = TRUE, c("striped","hover")) %>%
             column_spec(1, bold = TRUE) %>%
   # Add header above table
             add_header_above(
@@ -384,7 +384,7 @@ pds_all_rates %>%
             pivot_wider(names_from = fy, values_from = pop_rate_10000) %>%
             rename(`Integration Authority Area/Health Board` = geog) %>%
             kable(align = c("l", rep("r", length(all_years)))) %>%
-            kable_styling(full_width = TRUE) %>%
+            kable_styling(full_width = TRUE, c("striped","hover")) %>%
             column_spec(1, bold = TRUE) %>%
   # Add header above table
             add_header_above(
@@ -498,7 +498,7 @@ pds_exp_rates %>% select(geog, fy, exp_rate) %>%
             mutate(across(where(is.numeric), ~paste0(.,"%"))) %>% 
             rename(`Health Board` = geog) %>%
             kable(align = c("l", rep("r", length(full_years)))) %>%
-            kable_styling(full_width = TRUE) %>%
+            kable_styling(full_width = TRUE, c("striped","hover")) %>%
             column_spec(1, bold = TRUE) %>%
   # Add header above table
             add_header_above(
@@ -549,7 +549,7 @@ pds_met_rates %>% select(geog, fy, perc_met) %>%
             mutate(across(where(is.numeric), ~if_else(is.na(.), "\\-", paste0(.,"%")))) %>%
             rename(`Integration Authority Area/Health Board` = geog) %>%
             kable(align = c("l", rep("r", length(full_years)))) %>%
-            kable_styling(full_width = TRUE) %>%
+            kable_styling(full_width = TRUE, c("striped","hover")) %>%
             column_spec(1, bold = TRUE) %>%
   # Add header above table
             add_header_above(
