--- a/management-report/markdown/subpage-hb.Rmd
+++ b/management-report/markdown/subpage-hb.Rmd
@@ -105,6 +105,7 @@ est_date4 <- dmy(01042024)
   tay_date2 <- dmy(01042019)
   tay_date3 <- dmy(01042023)
   tay_date4 <- dmy(01042024)
+  tay_date5 <- dmy(01042025)
   
   tay_text <-  
     case_when(hb == "NHS Tayside" & sel_fy == extract_fin_year(tay_date1) |
@@ -117,11 +118,12 @@ est_date4 <- dmy(01042024)
            "possible to fill this gap. Subsequent measures put in place have successfully ", 
            "allowed NHS Tayside to improve on data reporting from 2019 onwards.*"),
       hb == "NHS Tayside" & sel_fy == extract_fin_year(tay_date3)|
-      hb == "NHS Tayside" & sel_fy == extract_fin_year(tay_date4)~
+      hb == "NHS Tayside" & sel_fy == extract_fin_year(tay_date4)|
+      hb == "NHS Tayside" & sel_fy == extract_fin_year(tay_date5)~
         paste0(" ", 
             "**Please note:** ",
-              "*PHS have identified issues with the data submitted by NHS Tayside for 2023/24 ", 
-              "and 2024/25, which has resulted in some records showing as incorrectly having met the standard. ",
+              "*PHS have identified issues with the data submitted by NHS Tayside for 2023/24, ", 
+              "2024/25 and 2025/26, which has resulted in some records showing as incorrectly having met the standard. ",
               "NHS Tayside has informed PHS that these data issues will be rectified once they have completed the ", 
               "migration to a new IT system. This is likely to be completed by the end of the year.*"), 
     TRUE ~ paste0(""))
@@ -274,9 +276,9 @@ Row
 
 `r orkney_text`
 
-`r fife_text`
+<!-- `r fife_text` -->
 
-`r bord_text`
+<!-- `r bord_text` -->
 
 `r lan_text`
 
